--- a/README
+++ b/README
@@ -1,3 +1,15 @@
 A bookmarklet that shows the ordering on the directed edges of your facebook friends
 
 See thekeesh.com for more
+
+------
+
+#### UPDATE 2016.02.06.09:27
+
+1. The original author doesn't actively develop it anymore. So I fork it to keep this awesome script alive.
+2. I don't claim any credits or authorship on this script.
+
+*Reference*
+
+* Original post from thekeesh: http://thekeesh.com/2011/08/who-does-facebook-think-you-are-searching-for/
+* My Vietnamese write-up: http://karmiphuc.com/cong-nghe/xep-hang-ban-be-tren-facebook/
